[package]
name = "yolol_number"
version = "0.1.0"
authors = ["Oscar <osmithsi@sfu.ca>"]
edition = "2018"

license = "MIT"
description = "A rusty implementation of the weird-ass special number type used in yolol."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
num-traits = "0.2.8"

[dev-dependencies]
serde_json = "1.0.40"