[package]
name = "yolol_number"
version = "0.5.6"
authors = ["Matrixmage <osmithsi@sfu.ca>"]
edition = "2018"

repository = "https://github.com/Jerald/yolol_number"
license = "MIT"
description = "A rusty implementation of the weird-ass special number type used in yolol."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
num-traits = "0.2.8"

regex = "1.2.1"
lazy_static = "1.3.0"

[dev-dependencies]
serde_json = "1.0.40"